fix out of bounds error in list form and make hovering over id display pokemon image and clicking on id go to card info page

--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -191,6 +191,21 @@ form {
     font-size: 1.25em;
 }
 
+.hidden-img {
+    display: none;
+}
+
+.img-hover-text:hover + .hidden-img {
+    display: block;
+    position: absolute;
+
+}
+
+.list-card-link {
+    text-decoration: none;
+    color: black;
+}
+
 /* Failure page */
 
 .failure-page {
